force-app-fat/main/fat/objects/FAT_TriggerObserver__mdt/FAT_TriggerObserver__mdt.object-meta.xml
<CustomObject>
    <description>Manage the relationships between the SObject of your trigger and your Apex classes.</description>
    <label>FAT_TriggerObserver</label>
    <pluralLabel>FAT_TriggerObservers</pluralLabel>
</CustomObject>