force-app-fat/main/fat/objects/FAT_TriggerObserver__mdt/fields/BeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>BeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Insert</label>
    <type>Checkbox</type>
</CustomField>