force-app-fat/main/fat/objects/FAT_TriggerObserver__mdt/fields/BeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>BeforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Update</label>
    <type>Checkbox</type>
</CustomField>