force-app-fat/main/fat/objects/FAT_TriggerObserver__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <label>sObject</label>
    <length>40</length>
    <type>Text</type>
</CustomField>